tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_compiler_version.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: The current compiler version 0.5.0-alpha doesn't match the specified requirement
  ┌─ fixtures/compile_errors/invalid_compiler_version.fe:1:8
  │
1 │ pragma <=0.1.0
  │        ^^^^^^^ The specified version requirement
  │
  = Note: Use `pragma 0.5.0-alpha` to make the code compile


